# y2mate_desktop

./: .gitignore  CMakeLists.txt  README.md  edit_video.cpp  edit_video.h  edit_video.ui  editvideowindow.cpp  editvideowindow.h  editvideowindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settings_dialog.cpp  settings_dialog.h  settings_dialog.ui  sleepthread.cpp  sleepthread.h  threadfunctions.cpp  threadfunctions.h  ui_edit_video.h  ui_editvideowindow.h  ui_mainwindow.h  ui_settings_dialog.h  y2mate.pro
y2mate/: CMakeLists.txt  downloaddialog.cpp  downloaddialog.h  downloaddialog.ui  downloadvideowindow.cpp  downloadvideowindow.h  downloadvideowindow.ui  editvideodialog.cpp  editvideodialog.h  editvideodialog.ui  main.cpp  searchvideo.cpp  searchvideo.h  searchvideo.ui  searchvideowindow.cpp  searchvideowindow.h  searchvideowindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  ui_downloaddialog.h  ui_downloadvideowindow.h  ui_editvideodialog.h  ui_searchvideowindow.h  ui_settingsdialog.h
y2mate/images/: appicon.rc
